Move header section under header tag and other alignments and small fixes

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -12,10 +12,11 @@
     position: absolute;
     top: 0;
     left: 0;
+    z-index: 100;
 }
 
 .header-container {
-    margin-top: 32px;
+    padding-top: 32px;
     display: flex;
     justify-content: space-between;
     flex-direction: row;
